--- a/less/custom.less
+++ b/less/custom.less
@@ -95,7 +95,8 @@ input:-moz-placeholder {
 	}
 	&--contact-form {
 		border: none;
-		margin-top: 30px;
+		display: block;
+		margin: 30px auto 0;
 		@media @mobile {
 			width: 100%;
 		}
