--- a/less/content-5.less
+++ b/less/content-5.less
@@ -19,13 +19,22 @@
 	&__frame {
 		width: 100%;
 		height: 400px;
-		background-color: @green-decore;
+		// background-color: @green-decore;
 		margin-bottom: 18px;
 		@media @desktop {
 			width: 555px;
 		}
+		&--1 {
+			background: url(img/poster1.jpg) no-repeat 50%;
+			background-size: cover;
+		}
+		&--2 {
+			background: url(img/poster2.jpg) no-repeat 50%;
+			background-size: cover;
+		}
 	}
 	&__description {
+		margin-top: 25px;
 		text-align: center;
 		@media @desktop {
 			text-align: left;
@@ -43,6 +52,81 @@
 		color: @gray;
 		@media @desktop {
 			font: 18px @libre-i;
+		}
+	}
+}
+#video-container {
+	position: relative;
+	&:hover, &:focus {
+	    #play-pause {
+	    	opacity: 1;
+	    }
+	}
+	video {
+		
+	}
+}
+.play-pause {
+	outline: none;
+	width: 151px;
+	height: 151px;
+	border: 2px solid #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -75px 0 0 -75px;
+	background-color: transparent;
+	.slow;
+	&:hover, &:focus {
+	    cursor: pointer;
+	}
+	&::before {
+	    content: '';
+	    display: block;
+	    position: absolute;
+	    background: url(img/play.png) center no-repeat;
+	    width: 100%;
+	    height: 100%;
+	    top: 0;
+	    left: 0;
+	}
+
+	&.played {
+		opacity: 0;
+		&::before {
+		    content: '';
+		    display: block;
+		    position: absolute;
+		    background: url(img/play.png) center no-repeat;
+		    width: 100%;
+		    height: 100%;
+		    top: 0;
+		    left: 0;
+		}
+	}
+	&.paused {
+		opacity: 0;
+		background: none;
+		&::before {
+		    content: '';
+		    display: block;
+		    position: absolute;
+		    width: 8px;
+		    height: 48px;
+		    background: @yellow-decore;
+		    top: 51px;
+		    left: 60px;
+		}
+		&::after {
+		    content: '';
+		    display: block;
+		    position: absolute;
+		    width: 8px;
+		    height: 48px;
+		    background: @yellow-decore;
+		    top: 51px;
+		    right: 60px;
 		}
 	}
 }
