--- a/less/content-5.less
+++ b/less/content-5.less
@@ -18,23 +18,30 @@
 	}
 	&__frame {
 		width: 100%;
-		height: 400px;
-		// background-color: @green-decore;
+		height: 312px;
 		margin-bottom: 18px;
 		@media @desktop {
 			width: 555px;
+			&--1 {
+				background: url(img/poster1.jpg) no-repeat 50%;
+				background-size: cover;
+			}
+			&--2 {
+				background: url(img/poster2.jpg) no-repeat 50%;
+				background-size: cover;
+			}
+			&--3 {
+				background: url(img/poster3.jpg) no-repeat 50%;
+				background-size: cover;
+			}
+			&--4 {
+				background: url(img/poster4.jpg) no-repeat 50%;
+				background-size: cover;
+			}
 		}
-		&--1 {
-			background: url(img/poster1.jpg) no-repeat 50%;
-			background-size: cover;
-		}
-		&--2 {
-			background: url(img/poster2.jpg) no-repeat 50%;
-			background-size: cover;
-		}
+		
 	}
 	&__description {
-		margin-top: 25px;
 		text-align: center;
 		@media @desktop {
 			text-align: left;
@@ -55,15 +62,12 @@
 		}
 	}
 }
-#video-container {
+.video-player-container{
 	position: relative;
 	&:hover, &:focus {
-	    #play-pause {
+	    .play-pause {
 	    	opacity: 1;
 	    }
-	}
-	video {
-		
 	}
 }
 .play-pause {
