--- a/less/content-6.less
+++ b/less/content-6.less
@@ -290,6 +290,15 @@
 		}
 	}
 }
+.floating-table-header {
+	position: fixed;
+	top: 118px;
+	z-index: 2;
+	width: 1200px;
+	td:nth-child(1) {
+		width: 312px;
+	}
+}
 .status-progress {
 	display: flex;
 	justify-content: space-between;
@@ -345,11 +354,61 @@
     }
 }
 .white-popup {
+	padding-top: 90px;
+	padding-bottom: 90px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	overflow: hidden;
 	position: relative;
-	background: #FFF;
-	padding: 20px;
-	width: auto;
-	max-width: 500px;
-	margin: 20px auto;
-	border-top: 3px solid @green-decore;
+	padding-left: 15px;
+	padding-right: 15px;
+	@media @desktop {
+		padding-left: 0;
+		padding-right: 0;
+		width: 1200px;
+	}
+	.scores {
+		display: flex;
+		justify-content: center;
+		font: 30px @trade;
+		text-transform: uppercase;
+	}
+	.score-text {
+		color: #b8b8b8;
+		margin-right: 25px;
+	}	
+	.rs-sum {
+		color: @yellow-text;
+	}
+	.status-progress {
+		display: flex;
+		justify-content: center;
+	}
+	.result-msg {
+		font: 18px/29px @libre-i;
+		border: 2px solid #f5f7f9;
+		padding: 40px;
+		width: 672px;
+		margin: 60px auto;
+	}
+	.contact-form__input {
+		background-color: #f8f8f8;
+	}
+	.contact-form__input::-webkit-input-placeholder {
+		color: #a4a4a4;
+	}
+	.contact-form__input:-moz-placeholder {
+		color: #a4a4a4;
+	}
+	// position: relative;
+	// background: #FFF;
+	// padding: 20px;
+	// width: auto;
+	// max-width: 500px;
+	// margin: 20px auto;
+	// border-top: 3px solid @green-decore;
+	.contact-form {
+		z-index: 12;
+	}
 }
