--- a/less/header.less
+++ b/less/header.less
@@ -121,6 +121,28 @@
 		}
 	}
 }
-
+@media @desktop {
+	.floating-header {
+		position: fixed;
+		top: 0;
+		z-index: 2;
+		-webkit-animation-duration: 1s; 
+		animation-duration: 1s; 
+		-webkit-animation-fill-mode: both; 
+		animation-fill-mode: both;
+		-webkit-animation-name: bounceInDown; 
+		animation-name: bounceInDown;  
+	}
+}
+@-webkit-keyframes bounceInDown {
+	0% { opacity: 0; -webkit-transform: translateY(-2000px); }
+	
+	100% { -webkit-transform: translateY(0); }
+}
+@keyframes bounceInDown {
+	0% { opacity: 0; transform: translateY(-2000px); }
+	
+	100% { transform: translateY(0); }
+}
 /*-----  End of HEADER  ------*/
 
