--- a/less/variables.less
+++ b/less/variables.less
@@ -26,8 +26,8 @@
 @gray: #b8b8b8;
 
 //Media Queries
-@mobile:      ~"only screen and (min-device-width : 320px) and (max-device-width : 479px)";
-@smartphone:  ~"only screen and (min-width: 480px) and (max-width: 766px)";
+@mobile:      ~"only screen and (min-device-width : 320px) and (max-device-width : 766px)";
+// @smartphone:  ~"only screen and (min-width: 480px) and (max-width: 766px)";
 @tablet:      ~"only screen and (min-width: 767px) and (max-width: 1199px)";
 @desktop:     ~"only screen and (min-width: 1200px)";
 @retina:      ~"only screen and (-webkit-min-device-pixel-ratio: 2),
