--- a/less/content-1.less
+++ b/less/content-1.less
@@ -1,8 +1,9 @@
 .content-1 {
-	height: 277px;
+	padding: 90px 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	width: 100%;
+	// height: 277px;
 }
