--- a/less/content-3.less
+++ b/less/content-3.less
@@ -10,6 +10,9 @@
 		padding: 90px 0 100px 90px;
 		background: url(img/content-3__left.jpg);
 		background-size: cover;
+		@media @mobile {
+			padding: 30px 15px;
+		}
 		@media @desktop {
 			height: 690px;
 			width: 50%;
@@ -19,6 +22,9 @@
 	}
 	&__tabs-area {
 		margin-right: 100px;
+		@media @mobile {
+			margin-right: 0;
+		}
 		@media @desktop {
 			float: right;
 			width: 600px;
@@ -43,6 +49,10 @@
 		&:hover, &:focus {
 		    cursor: pointer;
 		}
+		@media @mobile {
+			font-size: 20px;
+			padding: 18px;
+		}
 		@media @desktop {
 			font: 20px @prox-r;
 		}
@@ -51,18 +61,23 @@
 		    display: block;
 	    	float: left;
 	    	margin: 0 18px 0 25px;
+	    	@media @mobile {
+	    		margin-left: 0;
+	    	}
 		}
 		&::after {
-		    content: '+';
+		    content: '';
+		    line-height: 100%;
 		    display: block;
 		    position: absolute;
-		    color: @yellow-text;
-		    font-size: 40px;
-		    top: 20px;
-		    right: 20px;
-		    @media @desktop {
-		    	top: 7px;
-		    	right: 14px;
+		    top: 0;
+		    right: 14px;
+		    background: url(img/plus.png) center no-repeat;
+		    width: 20px;
+		    height: 100%;
+		    @media @retina {
+		    	background: url(img/plus@2x.png) center no-repeat;
+		    	background-size: 20px 20px;
 		    }
 		}
 		&--active {}
@@ -72,6 +87,9 @@
 		font: 25px/46px @libre-r;
 		background-color: rgba(255,255,255,.1);
 		padding: 19px;
+		@media @mobile {
+			font: 15px/26px @libre-r;
+		}
 		@media @desktop {
 			font: 15px/26px @libre-r;
 		}
@@ -86,6 +104,9 @@
 		background: url(img/video1.jpg) no-repeat;
 		background-size: cover;
 		width: 100%;
-		height: 690px;
+		@media @desktop {
+			height: 690px;
+		}
+		
 	}
 }
