--- a/less/content-5.less
+++ b/less/content-5.less
@@ -18,11 +18,11 @@
 	}
 	&__frame {
 		width: 100%;
-		height: 312px;
+		
 		margin-bottom: 18px;
 		@media @desktop {
 			width: 555px;
-			
+			height: 312px;
 		}
 		&--1 {
 			background: url(img/poster1.jpg) no-repeat 50%;
@@ -96,7 +96,6 @@
 	    top: 0;
 	    left: 0;
 	}
-
 	&.played {
 		opacity: 0;
 		&::before {
@@ -134,4 +133,7 @@
 		    right: 60px;
 		}
 	}
+}
+video::-webkit-media-controls {
+    display: none;
 }
