--- a/less/header.less
+++ b/less/header.less
@@ -6,6 +6,12 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 30px 0;
+	@media @mobile {
+		padding-bottom: 0;
+	}
+	@media @tablet {
+		padding-bottom: 0;
+	}
 	@media @desktop {
 		height: 118px;
 		justify-content: space-between;
