--- a/less/variables.less
+++ b/less/variables.less
@@ -26,7 +26,7 @@
 @gray: #b8b8b8;
 
 //Media Queries
-@mobile:      ~"only screen and (min-device-width : 320px) and (max-device-width : 766px)";
+@mobile:      ~"only screen and (min-width : 320px) and (max-width : 766px)";
 // @smartphone:  ~"only screen and (min-width: 480px) and (max-width: 766px)";
 @tablet:      ~"only screen and (min-width: 767px) and (max-width: 1199px)";
 @desktop:     ~"only screen and (min-width: 1200px)";
