--- a/css/main.css
+++ b/css/main.css
@@ -1951,12 +1951,12 @@ video::-webkit-media-controls {
   padding: 20px 0;
   border-top: 1px solid rgba(255, 255, 255, 0.4);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 @media only screen and (min-width: 1200px) {
   .footer__bottom {
+    flex-direction: row;
     height: 61px;
     align-items: center;
     justify-content: space-between;
@@ -1975,6 +1975,7 @@ video::-webkit-media-controls {
 @media only screen and (min-width: 1200px) {
   .footer__copyright {
     text-align: left;
+    text-align: center;
     font: 12px 'proxima_nova_rgregular';
   }
 }
