--- a/less/footer.less
+++ b/less/footer.less
@@ -39,10 +39,11 @@
 		padding: 20px 0;
 		border-top: 1px solid rgba(255,255,255,.4);
 		display: flex;
-		flex-direction: column;
+		// flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		@media @desktop {
+			flex-direction: row;
 			height: 61px;
 			align-items: center;
 			justify-content: space-between;
@@ -57,6 +58,7 @@
 		}
 		@media @desktop {
 			text-align: left;
+			text-align: center;
 			font: 12px @prox-r;
 		}
 	}
