--- a/less/content-8.less
+++ b/less/content-8.less
@@ -119,4 +119,19 @@
 			background-color: rgba(233,85,93,.4);
 		}
 	}
+	.wpcf7-response-output {
+		font: 16px @prox-s;
+		text-transform: uppercase;
+		padding: 15px;
+		&.wpcf7-mail-sent-ok {
+			background-color: @green-decore;
+			border: none;
+			color: #fff;
+		}
+		&.wpcf7-validation-errors {
+			background-color: @yellow-decore;
+			border: none;
+			color: #fff;
+		}
+	}
 }
