--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ input:-moz-placeholder {
   color: #f7e042;
   margin-top: 22px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .btn {
     font: 18px/58px 'proxima_novasemibold';
     height: 58px;
@@ -300,7 +300,7 @@ input:-moz-placeholder {
   display: block;
   margin: 30px auto 0;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .btn--contact-form {
     width: 100%;
   }
@@ -379,7 +379,7 @@ input:-moz-placeholder {
   text-align: center;
   text-transform: uppercase;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .title {
     font-size: 40px;
   }
@@ -419,7 +419,7 @@ input:-moz-placeholder {
   text-align: center;
   text-transform: uppercase;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .title--small {
     font-size: 30px;
   }
@@ -435,7 +435,7 @@ input:-moz-placeholder {
   text-align: center;
   margin: 10px auto 0;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .description {
     font-size: 24px;
   }
@@ -453,7 +453,7 @@ input:-moz-placeholder {
   font-size: 38px;
   line-height: 49px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .description--italic {
     font-size: 18px;
     line-height: 29px;
@@ -476,7 +476,7 @@ input:-moz-placeholder {
 .description-btn--white {
   color: #fff;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .description-btn {
     font-size: 22px;
     text-align: center;
@@ -521,7 +521,7 @@ input:-moz-placeholder {
           align-items: center;
   padding: 30px 0;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .header {
     padding-bottom: 0;
   }
@@ -569,7 +569,7 @@ input:-moz-placeholder {
     background-size: 75px 75px;
   }
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .header__logo {
     height: 160px;
     width: 100%;
@@ -591,7 +591,7 @@ input:-moz-placeholder {
   left: 94px;
   color: #44444d;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .header__logo::before {
     top: 90px;
     left: 0;
@@ -615,7 +615,7 @@ input:-moz-placeholder {
   bottom: -5px;
   left: 94px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .header__logo::after {
     font-size: 24px;
     left: 0;
@@ -629,7 +629,7 @@ input:-moz-placeholder {
     bottom: 10px;
   }
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .navigation {
     width: 100%;
   }
@@ -738,7 +738,7 @@ input:-moz-placeholder {
   position: relative;
   padding-top: 90px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron {
     padding-top: 20px;
   }
@@ -753,7 +753,7 @@ input:-moz-placeholder {
   overflow: visible;
   position: relative;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__wrapper {
     min-height: 812px;
   }
@@ -776,7 +776,7 @@ input:-moz-placeholder {
   width: 823px;
   height: 736px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__img {
     display: none;
   }
@@ -801,7 +801,7 @@ input:-moz-placeholder {
   font: 48px 'proxima_nova_rgregular';
   text-transform: uppercase;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__text-1 {
     font-size: 31px;
     text-align: center;
@@ -817,7 +817,7 @@ input:-moz-placeholder {
   color: #fff;
   font: 64px 'libre_baskervillebold';
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__text-2 {
     font-size: 35px;
     text-align: center;
@@ -833,7 +833,7 @@ input:-moz-placeholder {
   color: #fff;
   font: 42px 'proxima_nova_rgregular';
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__text-3 {
     font-size: 24px;
     text-align: center;
@@ -864,7 +864,7 @@ input:-moz-placeholder {
   margin-right: 18px;
   float: left;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__list-item::before {
     display: none;
   }
@@ -875,7 +875,7 @@ input:-moz-placeholder {
   display: block;
   text-transform: uppercase;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .jumbotron__list-item-text {
     margin-bottom: 10px;
     font: 11px/30px 'proxima_nova_rgregular';
@@ -918,7 +918,7 @@ input:-moz-placeholder {
   background-size: cover;
   padding: 90px 0;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-2 {
     padding: 30px 0;
   }
@@ -1013,7 +1013,7 @@ input:-moz-placeholder {
   margin-top: 16px;
   font: 38px/54px 'proxima_nova_rgregular';
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-2__plans-text-1 {
     font: 18px/24px 'proxima_nova_rgregular';
   }
@@ -1034,7 +1034,7 @@ input:-moz-placeholder {
   margin-top: 7px;
   color: #9d9d9d;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-2__plans-text-2 {
     font: 14px 'proxima_nova_rgregular';
   }
@@ -1060,7 +1060,7 @@ input:-moz-placeholder {
 .content-2__plans-list-element:nth-child(n+2) {
   border-top: 1px solid #e2e2e3;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-2__plans-list-element {
     font: 16px 'libre_baskervilleregular';
   }
@@ -1117,7 +1117,7 @@ input:-moz-placeholder {
   background: url(img/content-3__left.jpg);
   background-size: cover;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-3__left {
     padding: 30px 15px;
   }
@@ -1139,7 +1139,7 @@ input:-moz-placeholder {
 .content-3__tabs-area {
   margin-right: 100px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-3__tabs-area {
     margin-right: 0;
   }
@@ -1171,7 +1171,7 @@ input:-moz-placeholder {
 .content-3__tab-trigger:focus {
   cursor: pointer;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-3__tab-trigger {
     font-size: 20px;
     padding: 18px;
@@ -1188,7 +1188,7 @@ input:-moz-placeholder {
   float: left;
   margin: 0 18px 0 25px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-3__tab-trigger::before {
     margin-left: 0;
   }
@@ -1221,7 +1221,7 @@ input:-moz-placeholder {
   background-color: rgba(255, 255, 255, 0.1);
   padding: 19px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .content-3__hidden-text {
     font: 15px/26px 'libre_baskervilleregular';
   }
@@ -1252,7 +1252,7 @@ input:-moz-placeholder {
   }
 }
 .content-3 .play-pause {
-  opacity: 0;
+  opacity: 0 !important;
 }
 .content-4 {
   position: relative;
@@ -1910,6 +1910,10 @@ video::-webkit-media-controls {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .content-8 {
   background: url(img/content-8.jpg) no-repeat;
@@ -2043,7 +2047,7 @@ video::-webkit-media-controls {
   color: #e0e0e0;
   margin-top: 20px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .people__info {
     font-size: 16px;
     line-height: 26px;
@@ -2080,7 +2084,7 @@ video::-webkit-media-controls {
   font: 26px 'libre_baskervilleregular';
   position: relative;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .contact-form__input {
     font: 16px 'libre_baskervilleregular';
     height: 52px;
@@ -2095,6 +2099,21 @@ video::-webkit-media-controls {
 }
 .contact-form__input--has-error {
   background-color: rgba(233, 85, 93, 0.4);
+}
+.contact-form .wpcf7-response-output {
+  font: 16px 'proxima_novasemibold';
+  text-transform: uppercase;
+  padding: 15px;
+}
+.contact-form .wpcf7-response-output.wpcf7-mail-sent-ok {
+  background-color: #0d9d93;
+  border: none;
+  color: #fff;
+}
+.contact-form .wpcf7-response-output.wpcf7-validation-errors {
+  background-color: #ffda6b;
+  border: none;
+  color: #fff;
 }
 /*==============================
 =            FOOTER            =
@@ -2157,11 +2176,6 @@ video::-webkit-media-controls {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -2173,6 +2187,11 @@ video::-webkit-media-controls {
 }
 @media only screen and (min-width: 1200px) {
   .footer__bottom {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     height: 61px;
     -webkit-box-align: center;
     -webkit-align-items: center;
@@ -2189,7 +2208,7 @@ video::-webkit-media-controls {
   text-transform: uppercase;
   text-align: center;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .footer__copyright {
     font-size: 12px;
   }
@@ -2197,6 +2216,7 @@ video::-webkit-media-controls {
 @media only screen and (min-width: 1200px) {
   .footer__copyright {
     text-align: left;
+    text-align: center;
     font: 12px 'proxima_nova_rgregular';
   }
 }
@@ -2206,7 +2226,7 @@ video::-webkit-media-controls {
   width: 80px;
   height: 23px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 766px) {
+@media only screen and (min-width : 320px) and (max-width : 766px) {
   .footer__hb {
     margin-top: 20px;
   }
