Fix contact form

--- a/less/content-8.less
+++ b/less/content-8.less
@@ -118,6 +118,9 @@
 		&--has-error {
 			background-color: rgba(233,85,93,.4);
 		}
+		&--hidden {
+			display: none;
+		}
 	}
 	.wpcf7-response-output {
 		font: 16px @prox-s;
