remove sftp file

--- a/less/custom.less
+++ b/less/custom.less
@@ -289,5 +289,9 @@ input:-moz-placeholder {
 .green {
 	color: @green-text;
 }
+.numeric {
+	font-size: 1.1em;
+	font-family: @prox-r;
+}
 /*-----  End of Custom styles  ------*/
 
