--- a/less/content-6.less
+++ b/less/content-6.less
@@ -229,6 +229,7 @@
 					content: counter(test-table__body-item) '.';
 					float: left;
 					margin-right: 6px;
+					font-family: @prox-r;
 				}
 			}
 		}
